23935 - Make sure the text "Government of Canada" underneath the logo is invisible and only for screenreader

--- a/packages/dina-ui/components/button-bar/nav/wet-beow-bootstrap-4.css
+++ b/packages/dina-ui/components/button-bar/nav/wet-beow-bootstrap-4.css
@@ -396,3 +396,12 @@ a.nav-link.dropdown-toggle {
 .btn-outline-secondary {
   color: #3838f3;
 }
+
+.wb-inv {
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  margin: 0;
+  overflow: hidden;
+  position: absolute;
+  width: 1px;
+}
